2003-01-26  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* sample/chinese_wall :

	  - Added sample program.

2003-01-25  Vino Crescini  <jcrescin@cit.uws.ued.au>

	* common/vlad.h :

	  - Added a new error code for unique-item lists.

	* common/list.cpp :
	* common/list.h :
	* kb/symtab.cpp :

	  - Added a flag to the list to identify whether it should allow
	    identical items to be added or not. Symtab is set to unique.

	  - Added provisions to allow retrieval of identical items from
	    the list. Matching nodes are passed through an array.

	* kb/identifier.cpp :
	* kb/identifier.h :

	  - Added functions to return class attributes.

2003-01-24  Vino Crescini  <jcrescin@cit.uws.ued.au>

	* kb/Makefile.in :
	* kb/symtab.h :
	* kb/symtab.cpp :
	* kb/identifier.h :
	* kb/identifier.cpp :

	  - Added a class for the symbol table. To be used to store identifier
	    declarations. Symtab is derived from the list class and uses
	    the identifier class (which in turn is derived from the abstract
	    base class list_item).

	* Makefile.in :
	* configure.ac :

	  - Some changes to generate a Makefile in the kb directory.

	* common/list.cpp :
	* common/list.h :

	  - Some cleanup.

	  - Added a get function in the list class. Only temporary. This
	    will be replaced by a function that will retrieve an array
	    of items that matches instead of just returning the first match.

	* main/Makefile.in :
	* main/vlad.cpp :

	  - Changes to make the main binary link against the new kb lib.

2003-01-22  Vino Crescini  <jcrescin@cit.uws.edu.au>

	* common/list.cpp :
	* common/list.h :
	* common/vlad.h :

	  - Name cleanup.

	* common/list.cpp :
	* common/list.h :

	  - Added an abstract class to be used as the base class for the
	    list item.

	  - Converted the list class to store descendants of the list_item
	    class instead of void pointers. Note that the destructor and
	    cmp() must be implemented by classes that inherits from this
	    class.
